--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <div id="root"></div>
     <div id="input-portal"></div>
     <elevenlabs-convai agent-id="agent_4401kc4yjf52fya8kfg9s6npy05k"></elevenlabs-convai>
-    <script src="https://unpkg.com/@elevenlabs/convai-widget-embed" async type="text/javascript"></script>
+    <script src="https://unpkg.com/@elevenlabs/convai-widget-embed@beta" async type="text/javascript"></script>
     <script type="module" src="/src/main.tsx"></script>
   </body>
 </html>
