--- a/index.html
+++ b/index.html
@@ -2,12 +2,28 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" type="image/png" href="/icons/norvan-logo.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
-    <title>Norvan Nexus 3D Brain Interface</title>
-    <meta property="og:image" content="https://bolt.new/static/og_default.png" />
+    <meta name="theme-color" content="#0a0a0a" />
+
+    <title>Norvan Nexus - 3D Product Ecosystem Visualization</title>
+    <meta name="description" content="Explore Norvan's intelligent product ecosystem in an immersive 3D interface. Discover how NorCore, NorFlow, NorSense, and other AI-powered solutions interconnect to transform your business." />
+
+    <!-- Open Graph Meta Tags -->
+    <meta property="og:type" content="website" />
+    <meta property="og:title" content="Norvan Nexus - 3D Product Ecosystem Visualization" />
+    <meta property="og:description" content="Explore Norvan's intelligent product ecosystem in an immersive 3D interface. Discover how NorCore, NorFlow, NorSense, and other AI-powered solutions interconnect to transform your business." />
+    <meta property="og:image" content="/icons/norvan-logo.png" />
+    <meta property="og:image:width" content="1200" />
+    <meta property="og:image:height" content="630" />
+    <meta property="og:image:alt" content="Norvan Logo - Intelligent Business Solutions" />
+
+    <!-- Twitter Card Meta Tags -->
     <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:image" content="https://bolt.new/static/og_default.png" />
+    <meta name="twitter:title" content="Norvan Nexus - 3D Product Ecosystem Visualization" />
+    <meta name="twitter:description" content="Explore Norvan's intelligent product ecosystem in an immersive 3D interface. Discover how NorCore, NorFlow, NorSense, and other AI-powered solutions interconnect." />
+    <meta name="twitter:image" content="/icons/norvan-logo.png" />
+    <meta name="twitter:image:alt" content="Norvan Logo - Intelligent Business Solutions" />
   </head>
   <body>
     <div id="root"></div>
