--- a/index.html
+++ b/index.html
@@ -8,22 +8,40 @@
 
     <title>Norvan Nexus - 3D Product Ecosystem Visualization</title>
     <meta name="description" content="Explore Norvan's intelligent product ecosystem in an immersive 3D interface. Discover how NorCore, NorFlow, NorSense, and other AI-powered solutions interconnect to transform your business." />
+    <meta name="author" content="Norvan" />
+    <meta name="keywords" content="Norvan, AI, 3D visualization, product ecosystem, business intelligence, NorCore, NorFlow, NorSense" />
 
-    <!-- Open Graph Meta Tags -->
+    <!-- Open Graph Meta Tags (Facebook, LinkedIn, WhatsApp) -->
     <meta property="og:type" content="website" />
+    <meta property="og:site_name" content="Norvan" />
     <meta property="og:title" content="Norvan Nexus - 3D Product Ecosystem Visualization" />
     <meta property="og:description" content="Explore Norvan's intelligent product ecosystem in an immersive 3D interface. Discover how NorCore, NorFlow, NorSense, and other AI-powered solutions interconnect to transform your business." />
-    <meta property="og:image" content="/icons/norvan-logo.png" />
+    <meta property="og:image" content="/nexus_thumbnail.png" />
+    <meta property="og:image:secure_url" content="/nexus_thumbnail.png" />
+    <meta property="og:image:type" content="image/png" />
     <meta property="og:image:width" content="1200" />
     <meta property="og:image:height" content="630" />
-    <meta property="og:image:alt" content="Norvan Logo - Intelligent Business Solutions" />
+    <meta property="og:image:alt" content="Norvan Nexus - Interactive 3D Product Ecosystem" />
+    <meta property="og:locale" content="en_US" />
 
     <!-- Twitter Card Meta Tags -->
     <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:site" content="@Norvan" />
+    <meta name="twitter:creator" content="@Norvan" />
     <meta name="twitter:title" content="Norvan Nexus - 3D Product Ecosystem Visualization" />
     <meta name="twitter:description" content="Explore Norvan's intelligent product ecosystem in an immersive 3D interface. Discover how NorCore, NorFlow, NorSense, and other AI-powered solutions interconnect." />
-    <meta name="twitter:image" content="/icons/norvan-logo.png" />
-    <meta name="twitter:image:alt" content="Norvan Logo - Intelligent Business Solutions" />
+    <meta name="twitter:image" content="/nexus_thumbnail.png" />
+    <meta name="twitter:image:alt" content="Norvan Nexus - Interactive 3D Product Ecosystem" />
+
+    <!-- WhatsApp & Telegram (uses Open Graph) -->
+    <meta property="og:url" content="https://yourdomain.com" />
+
+    <!-- LinkedIn -->
+    <meta property="og:image" content="/nexus_thumbnail.png" />
+
+    <!-- Pinterest -->
+    <meta name="pinterest:description" content="Explore Norvan's intelligent product ecosystem in an immersive 3D interface." />
+    <meta name="pinterest:media" content="/nexus_thumbnail.png" />
   </head>
   <body>
     <div id="root"></div>
