--- a/public/thumbnail-generator.html
+++ b/public/thumbnail-generator.html
@@ -226,9 +226,9 @@
         <ol style="text-align: left; display: inline-block;">
             <li>Take a screenshot of the thumbnail area above (1200x630px)</li>
             <li>Or use browser dev tools to capture the #thumbnail element</li>
-            <li>Save the image as <code>og-image.png</code> or <code>thumbnail.png</code></li>
-            <li>Place it in the <code>/public</code> folder</li>
-            <li>Update the meta tags in <code>index.html</code> to point to your new image</li>
+            <li>Save the image as <code>nexus_thumbnail.png</code></li>
+            <li>Replace the existing file in the <code>/public</code> folder</li>
+            <li>The meta tags are already configured to use this image across all platforms (WhatsApp, Facebook, Twitter, LinkedIn, Pinterest)</li>
         </ol>
         <p style="margin-top: 20px; color: rgba(255,255,255,0.6);">
             You can also use tools like Figma, Canva, or screenshot utilities to capture this at exact dimensions.
